# wasm-bindgen-wry-1

./: Cargo.toml  agents.md  diff-api.sh
.github/: workflow-smoke-test.txt
.github/workflows/: main.yml  public-api-diff-comment.yml  wasm-bindgen-release.yml
examples/leptos/: Cargo.toml
examples/leptos/src/: main.rs
examples/openstreetmap/src/: main.rs
patches/wasm-bindgen/: 0001-Prepare-root-workspace-for-wry-patching.patch  0002-Point-sys-crates-at-the-wry-shim.patch  0003-Use-JsThreadLocal-for-native-js-sys-state.patch  0004-Rewrite-web-sys-x-and-wasm-bindgen-futures-x-READMEs.patch  BASE  UPGRADE_FAILURE.md
scripts/: bump-wasm-bindgen-version.rs  check-wasm-bindgen-api.rs  check-wasm-bindgen-releases.rs  update-wasm-bindgen.sh  wasm-bindgen-patches.sh
shims/wasm-bindgen/: Cargo.toml  README.md
shims/wasm-bindgen-macro/: Cargo.toml
wasm-bindgen/: Cargo.toml
wasm-bindgen/crates/futures/: Cargo.toml  README.md
wasm-bindgen/crates/js-sys/: Cargo.toml
wasm-bindgen/crates/js-sys/src/: lib.rs
wasm-bindgen/crates/js-sys/src/futures/: queue.rs
wasm-bindgen/crates/shared/: Cargo.toml
wasm-bindgen/crates/web-sys/: Cargo.toml  README.md
wasm-bindgen/crates/web-sys/src/: lib.rs
wry-bindgen/: Cargo.toml
wry-bindgen-macro/: Cargo.toml
wry-bindgen-macro-support/: Cargo.toml
wry-bindgen-macro-support/src/: ast.rs  codegen.rs  lib.rs  parser.rs
wry-bindgen-macro-support/src/codegen/: common.rs  erasure.rs  exports.rs  imports.rs  js.rs  mod.rs  statics.rs  string_enum.rs  types.rs
wry-bindgen/src/: batch.rs  cast.rs  clamped.rs  closure.rs  convert.rs  encode.rs  erasure.rs  function.rs  function_registry.rs  id_allocator.rs  intern.rs  ipc.rs  js_error.rs  js_helpers.rs  lib.rs  object_store.rs  parent.rs  rt.rs  runtime.rs  sys.rs  try_from_js.rs  type_cache.rs  value.rs  wire.rs  wry.rs
wry-bindgen/src/encode/: callbacks.rs  clamped.rs  containers.rs  mod.rs  primitives.rs  tests.rs  values.rs
wry-bindgen/src/js/: convert.js  hash.txt  main.js
wry-bindgen/src/ts/: convert.ts  encoding.ts  heap.ts  ipc.ts  main.ts  rust_exports.ts  rust_function.ts  types.ts
wry-launch/: Cargo.toml
wry-launch/benches/: batching.rs
wry-launch/src/: bindings.rs  lib.rs  webview.rs
wry-launch/tests/main_thread_tests/: async_bindings.rs  batch_stress.rs  borrow_stack.rs  callbacks.rs  clamped.rs  closure_paths.rs  deferred_heap_refs.rs  export_call.rs  jsvalue.rs  main.rs  opaque_id_stress.rs  roundtrip.rs  structs.rs  wasm_bindgen_compat.rs
