[package]
authors = ["The wasm-bindgen Developers"]
categories = ["wasm"]
description = """
Easy support for interacting between JS and Rust.
"""
documentation = "https://docs.rs/wasm-bindgen"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen"
include = ["/build.rs", "/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "not-wasm-bindgen"
readme = "README.md"
repository = "https://github.com/wasm-bindgen/wasm-bindgen"
rust-version = "1.77"
version = "0.2.121"

[package.metadata.docs.rs]
features = ["serde-serialize"]

[lib]
test = false

[features]
default = ["std"]
enable-interning = ["std"]
serde-serialize = ["serde", "serde_json", "std"]
spans = []
std = []

# Whether or not the `#[wasm_bindgen]` macro is strict and generates an error on
# all unused attributes
strict-macro = ["wasm-bindgen-macro/strict-macro"]

# INTERNAL ONLY: Enables gg-alloc as system allocator when using wasm-bindgen-test to check that large pointers
# are handled correctly
gg-alloc = ["wasm-bindgen-test/gg-alloc"]

# Deprecated crate features
msrv = []
rustversion = []
xxx_debug_only_print_generated_code = []

[dependencies]
cfg-if = "1.0.0"
once_cell = { version = "1.12", default-features = false }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen-macro = { path = "crates/macro", version = "=0.2.121" }
wasm-bindgen-shared = { path = "crates/shared", version = "=0.2.121" }

[build-dependencies]
# In older MSRVs, dependencies and crate features can't have the same name.
rustversion-compat = { package = "rustversion", version = "1.0.6" }

[dev-dependencies]
once_cell = "1"
wasm-bindgen-test = { path = 'crates/test' }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = { path = 'crates/js-sys', features = ["unsafe-eval"] }
paste = "1"
serde_derive = "1.0"
wasm-bindgen-futures = { path = 'crates/futures' }
wasm-bindgen-test-crate-a = { path = 'tests/crates/a' }
wasm-bindgen-test-crate-b = { path = 'tests/crates/b' }

[target.'cfg(target_arch = "wasm64")'.dev-dependencies]
js-sys = { path = 'crates/js-sys', features = ["unsafe-eval"] }
paste = "1"
serde_derive = "1.0"
wasm-bindgen-futures = { path = 'crates/futures' }
wasm-bindgen-test-crate-a = { path = 'tests/crates/a' }
wasm-bindgen-test-crate-b = { path = 'tests/crates/b' }

[lints]
workspace = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
  'cfg(wasm_bindgen_use_js_sys)',
  'cfg(xxx_debug_only_print_generated_code)',
] }
unused_lifetimes = "warn"

[workspace.lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
uninlined_format_args = "warn"

[workspace]
exclude = [
  "benchmarks",
  "crates/cli",
  "crates/msrv/resolver",
  "crates/msrv/lib",
  "crates/msrv/cli",
  "crates/test",
  "crates/test/sample",
  "crates/typescript-tests",
  "crates/webidl",
  "crates/webidl-tests",
  "examples/*",
  "tests/no-std",
]
members = [
  "crates/js-sys",
  "crates/web-sys",
  "crates/futures",
]
resolver = "2"
