[package]
name = "wry-bindgen-macro"
version = "0.2.122"
edition = "2024"
description = "Procedural macro for wry-bindgen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[lib]
proc-macro = true

[dependencies]
wry-bindgen-macro-support = { path = "../wry-bindgen-macro-support", version = "=0.2.122" }
quote = "1"

[lints]
workspace = true
