[package]
name = "wry-bindgen"
version = "0.2.122"
edition = "2024"
description = "Native desktop implementation of wasm-bindgen APIs using wry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[features]
default = ["std"]
std = []
# Mirror upstream wasm-bindgen's feature surface so the public-API diff (which runs
# against this crate) matches and downstream feature flags resolve. `serde`/`serde_json`
# enable the optional deps used by `JsValue::{from,into}_serde`; `gg-alloc`/`strict-macro`
# exist to match upstream's feature names.
enable-interning = ["std"]
serde-serialize = ["serde", "serde_json", "std"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
spans = []
strict-macro = []
gg-alloc = []
msrv = []
rustversion = []
xxx_debug_only_print_generated_code = []

[dependencies]
base64 = "0.22"
bytemuck = "1.14"
inventory = "0.3.21"
wry-bindgen-macro = { path = "../wry-bindgen-macro", version = "=0.2.122" }
# We use this instead of std because wasm bindgen supports no_std environments
once_cell = { version = "1.21.3", features = ["critical-section"] }
spin = "0.10.0"
futures-core = "0.3.31"
pollster = "0.4.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
async-channel = "2.5.0"
http = "1.4.0"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
lazy-js-bundle = "0.7.2"

[lints]
workspace = true
