[package]
name = "leptos-todomvc"
version = "0.1.0"
edition = "2024"

[dependencies]
wry-launch = { version = "0.1.0", path = "../../wry-launch" }
leptos = { git = "https://github.com/ealmloff/leptos", rev = "bfd00d83c7925882a7f77a1b0014f26e7c2edcac", features = ["csr"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "js", "serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlHeadElement",
    "KeyboardEvent",
    "Storage",
    "Window",
]

[lints]
workspace = true
