[package]
name = "wasm-bindgen"
version = "0.2.122"
edition = "2024"
description = "Shim crate that re-exports either wry-bindgen (desktop) or wasm-bindgen (wasm32)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/wasm-bindgen-wry"

[features]
default = ["std"]
std = []
# Mirror upstream wasm-bindgen's feature surface so downstream crates that enable
# these features still build against the shim. Features that map to optional
# upstream dependencies (serde, serde_json) or other crates' features (gg-alloc,
# strict-macro) are declared as no-ops here since the shim has no such deps.
enable-interning = ["std", "wry-bindgen/enable-interning"]
serde-serialize = ["serde", "serde_json", "std"]
serde = []
serde_json = []
spans = []
strict-macro = []
gg-alloc = []
msrv = []
rustversion = []
xxx_debug_only_print_generated_code = []

[dependencies]
wasm-bindgen-macro = { path = "../wasm-bindgen-macro", package = "wasm-bindgen-macro", version = "=0.2.122" }

# Desktop implementation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry-bindgen = { path = "../../wry-bindgen", version = "=0.2.106-alpha.1" }

# wasm32 implementation - commented out to avoid links conflict with crates.io version
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", tag = "0.2.106" }

[lints]
workspace = true
