[package]
authors = ["The wasm-bindgen Developers"]
description = "Bridging the gap between Rust Futures and JavaScript Promises"
documentation = "https://docs.rs/wasm-bindgen-futures"
edition = "2021"
homepage = "https://wasm-bindgen.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-futures"
readme = "./README.md"
repository = "https://github.com/wasm-bindgen/wasm-bindgen/tree/master/crates/futures"
rust-version = "1.77"
version = "0.4.72"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
js-sys = { path = "../js-sys", package = "js-sys", default-features = false }
wasm-bindgen = { path = "../../../shims/wasm-bindgen", package = "wasm-bindgen", default-features = false }

[features]
default = ["std"]
futures-core-03-stream = ["js-sys/futures-core-03-stream"]
std = ["wasm-bindgen/std", "js-sys/std"]

[lints]
workspace = true
